# blog

./: Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
migrations/20201114164000_create_posts/: up.sql
migrations/20201115132500_create_tags/: down.sql  up.sql
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  routes.rs  schema.rs  utils.rs
src/models/: mod.rs  post.rs  schema.rs  user.rs
static/: stylesheet.css  stylesheet.min.css
static/errors/: 400.html  404.html  500.html
templates/: base.html.tera  blog.html.tera  error.html.tera  hireme.html.tera  index.html.tera  post.html.tera  write.html.tera
