[package]
name = "web"
version = "0.1.0"
authors = ["Tomás Farías Santana <tomas@tomasfarias.dev>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.3"
chrono = { version = "^0.4.19", features = ["serde"] }
derive_more = "^0.99"
diesel = { version = "^1.4.5", features = ["postgres", "r2d2", "chrono"] }
env_logger = "^0.7"
serde = "^1.0.117"
tera = "^1.5.0"
