[package]
name = "web"
version = "0.1.0"
authors = ["Tomás Farías Santana <tomas@tomasfarias.dev>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-web-httpauth = "0.5.0"
actix-files = "0.3"
alcoholic_jwt = "^1.0.0"
chrono = { version = "^0.4.19", features = ["serde"] }
derive_more = "^0.99"
diesel = { version = "^1.4.5", features = ["postgres", "r2d2", "chrono"] }
env_logger = "^0.7"
log = "0.4"
reqwest = "0.9.22"
serde = "^1.0.117"
tera = "^1.5.0"
